--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 
 # rosettafish
 
-[![Travis build status](https://travis-ci.org/pbs-assess/rosettafish?branch=master)](https://travis-ci.org/pbs-assess/rosettafish)
+[![Travis build status](https://travis-ci.org/pbs-assess/rosettafish.svg?branch=master)](https://travis-ci.org/pbs-assess/rosettafish)
 
 rosettafish is an R package to translate fish- and fisheries-related words or short phrases between languages (e.g. French to English, English to French).
 
