--- a/README.Rmd
+++ b/README.Rmd
@@ -11,7 +11,8 @@ knitr::opts_chunk$set(
   fig.path = "man/figures/README-",
   out.width = "70%",
   fig.width = 5,
-  fig.asp = 0.618
+  fig.asp = 0.618,
+  dpi = 200
 )
 ```
 
