Add `custom_terms` option and cleanup
- Addresses #18
- Removed Inuktitut for now to simplify package
- Cleaned up documentation
- Added unit tests
- Moved dictionary to data-raw

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,15 +21,13 @@ knitr::opts_chunk$set(
 [![Travis build status](https://travis-ci.org/pbs-assess/rosettafish.svg?branch=master)](https://travis-ci.org/pbs-assess/rosettafish)
  [![Coverage status](https://codecov.io/gh/pbs-assess/rosettafish/branch/master/graph/badge.svg)](https://codecov.io/github/pbs-assess/rosettafish?branch=master)
 
-rosettafish is an R package to translate fish- and fisheries-related words or short phrases between languages (e.g. French to English, English to French, English to Inuktitut).
+rosettafish is an R package to translate fish- and fisheries-related words or short phrases between languages (English to French or French to English).
 
 This would apply to figure labels to produce separate figures in two languages, or a single figure with labels in two languages. It can also be used for other text (such as table headings), but is not intended for translation of complete sentences.
 
-In particular, it should be useful for automatically producing translated technical figures to go into Research Documents and presentations. This is done when building the figures (in R) and saves someone having to manually edit the figure (in, say, Photoshop). This preserves the quality and the output formats of figures in both languages, and is especially time-saving when the same figure axes are used for multiple figures (e.g. a time series of biomass estimates for multiple model runs of a stock assessment).
+In particular, it should be useful for automatically producing translated technical figures to go into Research Documents and presentations. This is done when building the figures (in R) and saves someone having to manually edit the figure (in, say, Photoshop). This preserves the quality and the output formats of figures in both languages, and is especially time-saving when the same figure axes are used for multiple figures (e.g., a time series of biomass estimates for multiple model runs of a stock assessment).
 
 The package has a built-in .csv file of English-French translations of common technical fisheries terms (that are often incorrectly translated by generic automatic translators). Users can add to this or use their own file, and are encouraged to add to the ever-expanding list of common terms using the instructions below.
-
-This is currently implemented for French-English translations with some Inuktitut, but could be expanded to other languages.
 
 ## Installation
 
@@ -84,13 +82,13 @@ ggplot(df, aes(years, biomass)) + geom_line() +
 *If you're comfortable with Git and file encodings:*
 
 1. Fork and clone this repository.
-2. Add the terms to the end of the file `inst/extdata/terms.csv` with a text editor (**not Excel!**). Ensure your editor is saving in UTF-8 format or the French accents will be destroyed. [Help with UTF-8 file encoding and RStudio](https://support.rstudio.com/hc/en-us/articles/200532197-Character-Encoding).
+2. Add the terms to the end of the file `data-raw/terms.csv` with a text editor (**not Excel!**). Ensure your editor is saving in UTF-8 format or the French accents will be destroyed. [Help with UTF-8 file encoding and RStudio](https://support.rstudio.com/hc/en-us/articles/200532197-Character-Encoding).
 3. Source the file data/make-dictionary.R to include data in the package (see the more detailed instructions in the next section).
 4. Push to GitHub and submit a pull request.
 
 *If you'd rather a quick way to edit without worrying about Git or file encodings*:
 
-1. [Edit the file directly on GitHub](https://github.com/pbs-assess/rosettafish/edit/master/inst/extdata/terms.csv).
+1. [Edit the file directly on GitHub](https://github.com/pbs-assess/rosettafish/edit/master/data-raw/terms.csv).
 2. Add the terms to the end of the file.
 3. Click the button to create a pull request.
 
@@ -102,7 +100,7 @@ on the GitHub site and give us your new translated terms.
 
 The above instructions are fine if you're willing to wait for us to merge your pull request. If instead you want to update the terms and use the package immediately, follow the above instructions to add your terms and then open `data-raw/make-dictionary.R` and source it in R. This will:
 
-- sort the `inst/extdata/terms.csv` dictionary file alphabetically
+- sort the `data-raw/terms.csv` dictionary file alphabetically
 - stop you if there are any duplicates (fix them!)
 - save the data into the package data so it can be used
 
@@ -112,7 +110,7 @@ After sourcing this file, you can reinstall the package to use it. For example, 
 devtools::install(quick = TRUE, dependencies = FALSE)
 ```
 
-Or open the project in RStudio and run Build `->` Install and Restart.
+Or open the project in RStudio and run Build > Install and Restart.
 
 You will need to restart any other R sessions to be able to use the newly installed package.
 
