Switch from Travis to GitHub Actions CI

--- a/README.Rmd
+++ b/README.Rmd
@@ -18,8 +18,10 @@ knitr::opts_chunk$set(
 
 # rosettafish
 
-[![Travis build status](https://travis-ci.org/pbs-assess/rosettafish.svg?branch=master)](https://travis-ci.org/pbs-assess/rosettafish)
- [![Coverage status](https://codecov.io/gh/pbs-assess/rosettafish/branch/master/graph/badge.svg)](https://codecov.io/github/pbs-assess/rosettafish?branch=master)
+<!-- badges: start -->
+[![R-CMD-check](https://github.com/pbs-assess/rosettafish/workflows/R-CMD-check/badge.svg)](https://github.com/pbs-assess/rosettafish/actions)
+[![Coverage status](https://codecov.io/gh/pbs-assess/rosettafish/branch/master/graph/badge.svg)](https://codecov.io/github/pbs-assess/rosettafish?branch=master)
+<!-- badges: end -->
 
 rosettafish is an R package to translate fish- and fisheries-related words or short phrases between languages (English to French or French to English).
 
